--- a/Asp_Lab1/Rozklad.UI/Views/Home/Index.cshtml
+++ b/Asp_Lab1/Rozklad.UI/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
         {
             <tr>
                 <td>@u.DepartureTime</td>
-                <td></td>
+                <td>@u.Busrooute.IntermediateStops</td>
                 <td>@u.Seats</td>
                 <td></td>
                 <td></td>
