--- a/Asp_Lab1/Rozklad.UI/Views/Home/Delete.cshtml
+++ b/Asp_Lab1/Rozklad.UI/Views/Home/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Rozklad.Repos.Dto
-@model UserReadDto
+@model BusSheduleReadDto
 @{
 }
 
@@ -7,17 +7,17 @@
   
 
 
- <h1>Видалити користувача?</h1>
+ <h1>Видалити маршрут?</h1>
 <hr />
 
-<p>@Model.FirstName @Model.LastName</p>
-<p>@Model.Email</p>
+<p>@Model.ArrivalTime</p>
+<p>@Model.DepartureTime</p>
 
 <hr />
 
 <form asp-action="ConfirmDelete" class=" col-md-4">
         @Html.AntiForgeryToken()
     <input asp-for="Id" type="hidden" />
-    <button type="submit" class=" btn btn-danger">Видалити користувача!!!</button>
-    <a href="/users/index" class="btn btn-outline-primary">Повернутися до списку або відмінити</a>
+    <button type="submit" class=" btn btn-danger">Видалити маршрут!!!</button>
+    <a href="/home/index" class="btn btn-outline-primary">Повернутися до списку або відмінити</a>
         <</form>
