--- a/Asp_Lab1/Rozklad.UI/Views/Home/Edit.cshtml
+++ b/Asp_Lab1/Rozklad.UI/Views/Home/Edit.cshtml
@@ -1,15 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Rozklad.Repos.Dto
 
-@model UserReadDto
-
-@{
-    var roles = ViewBag.Roles as IEnumerable<IdentityRole>;
-}
+@model BusSheduleReadDto
 
 
 <div class="float-end">
-    <a href="/users/index" class="btn btn-outline-primary">Повернутися до списку</a>
+    <a href="/home/index" class="btn btn-outline-primary">Повернутися до списку</a>
 </div>
 
 <h1>Редагування</h1>
@@ -19,43 +15,59 @@
     <form asp-action="Edit" class=" col-md-4">
         @Html.AntiForgeryToken()
         <input asp-for="Id" type="hidden"/>
-
         <div class="mb-3">
-            <label asp-for="FirstName" class="form-label"></label>
-            <input asp-for="FirstName" class=" form-control" />
-            <span asp-validation-for="FirstName" class=" text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="LastName" class="form-label"></label>
-            <input asp-for="LastName" class=" form-control" />
-            <span asp-validation-for="LastName" class=" text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="Email" class="form-label"></label>
-            <input asp-for="Email" class=" form-control" />
-            <span asp-validation-for="Email" class=" text-danger"></span>
+            <label asp-for="DepartureTime" class="form-label"></label>
+            <input asp-for="DepartureTime" class=" form-control" />
+            <span asp-validation-for="DepartureTime" class=" text-danger"></span>
         </div>
 
         <div class="mb-3">
-            <label asp-for="Roles" class=" form-label"></label>
-            <select class="form-select" size="3" id="roles" name="roles" multiple>
-                @foreach(var r in roles)
-                {
-                    var selected = Model.Roles.Any(x => x.Name == r.Name) ? true : false;
-                    <!option value="@r.Name" @(selected ? "selected" : "")>@r.Name</!option>
-
-                }
-            </select>
-
+            <label asp-for="Busrooute.PlaceOfArrival" class="form-label"></label>
+            <input asp-for="Busrooute.PlaceOfArrival" class=" form-control" />
+            <span asp-validation-for="Busrooute.PlaceOfArrival" class=" text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Busrooute.IntermediateStops" class="form-label"></label>
+            <input asp-for="Busrooute.IntermediateStops" class=" form-control" />
+            <span asp-validation-for="Busrooute.IntermediateStops" class=" text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Busrooute.PlaceOfDeparture" class="form-label"></label>
+            <input asp-for="Busrooute.PlaceOfDeparture" class=" form-control" />
+            <span asp-validation-for="Busrooute.PlaceOfDeparture" class=" text-danger"></span>
         </div>
 
-
-        <div class="mb-3 ">
-            <div class=" form-check form-switch">
-                <input class=" form-check-input" type="checkbox" asp-for="IsConfirmed" />
-                <label class="form-check-label" asp-for="IsConfirmed"></label>
-            </div>
+        <div class="mb-3">
+            <label asp-for="Seats" class="form-label"></label>
+            <input asp-for="Seats" class=" form-control" />
+            <span asp-validation-for="Seats" class=" text-danger"></span>
         </div>
+        <div class="mb-3">
+            <label asp-for="carier.Name" class="form-label"></label>
+            <input asp-for="carier.Name" type="text" class=" form-control" />
+            <span asp-validation-for="carier.Name" class=" text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="carier.Transport" class="form-label"></label>
+            <input asp-for="carier.Transport" class=" form-control" />
+            <span asp-validation-for="carier.Transport" class=" text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="status.StatusValue" class="form-label"></label>
+            <input asp-for="status.StatusValue" class=" form-control" />
+            <span asp-validation-for="status.StatusValue" class=" text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="ArrivalTime" class="form-label"></label>
+            <input asp-for="ArrivalTime" class=" form-control" />
+            <span asp-validation-for="ArrivalTime" class=" text-danger"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Cost" class="form-label"></label>
+            <input asp-for="Cost" class=" form-control" />
+            <span asp-validation-for="Cost" class=" text-danger"></span>
+        </div>
+
         <div class="mb-3">
             <button class="btn btn-primary" type="submit">Зберегти</button>
         </div>
