--- a/Asp_Lab1/Rozklad.UI/Views/Shared/_LayoutDashmin.cshtml
+++ b/Asp_Lab1/Rozklad.UI/Views/Shared/_LayoutDashmin.cshtml
@@ -65,7 +65,11 @@
                     @if (User.IsInRole("Admin"))
                     {
                         <a href="/users/index" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Користувачі</a>
-                    }  
+                    }
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a href="/home/ticket" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Замовлення</a>
+                    }
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Authorization</a>
                         <div class="dropdown-menu bg-transparent border-0">
