--- a/Asp_Lab1/Rozklad.UI/Views/Users/Index.cshtml
+++ b/Asp_Lab1/Rozklad.UI/Views/Users/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<UserReadDto>
 
 @{
-    Layout = "~/Views/Shared/_LayoutDashmin.cshtml";
+    //Layout = "/Views/Shared/_LayoutDashmin.cshtml";
 }
 
 
