--- a/Asp_Lab1/Rozklad.UI/Views/Shared/_LayoutDashmin.cshtml
+++ b/Asp_Lab1/Rozklad.UI/Views/Shared/_LayoutDashmin.cshtml
@@ -50,10 +50,10 @@
                     <div class="ms-3">
                     @if (User.IsInRole("User"))
                         {
-                            <span>User</span>
+                            <span>Вхід виконаний</span>
                         }
-                       else{
-                            <span>Admin</span>
+                        else{
+                            <span>В аккаунт не ввійдено</span>
                        }
                            
                         
